syntax = "proto3";

option java_multiple_files = true;
option java_package = "billing";

// Define the service contract
service BillingService {
  rpc CreateBillingRequest (BillingRequest) returns (BillingResponse);
}

// Request message definition
message BillingRequest {
  string patientId = 1;
  string name = 2;
  string email = 3;
}

// Response message definition
message BillingResponse {
  string accountId = 1;
  string status = 2;
}
